début modif design

--- a/bot/templates/base.html
+++ b/bot/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Chatbot</title>
+    <title>Thierry</title>
 </head>
 <body>
 <div class="container">
@@ -15,8 +15,8 @@
                     <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Sam. How can I help you?</p>
+                    <h4 class="chatbox__heading--header">Thierry</h4>
+                    <p class="chatbox__description--header">Votre assistant de santé virtuel</p>
                 </div>
             </div>
             <div class="chatbox__messages">
@@ -24,7 +24,7 @@
             </div>
             <div class="chatbox__footer">
                 <input type="text" placeholder="Write a message...">
-                <button class="chatbox__send--footer send__button">Send</button>
+                <button class="chatbox__send--footer send__button">Envoyer</button>
             </div>
         </div>
         <div class="chatbox__button">
