--- a/bot/templates/base.html
+++ b/bot/templates/base.html
@@ -1,42 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i&display=swap" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet" media="screen">
+    <!-- START BOT STYLE-->
 <head>
     <meta charset="UTF-8">
-    <title>Thierry</title>
+    <title>Thierry::FGM</title>
+    
+    <!-- END BOT STYLE-->
 </head>
+
 <body>
-<div class="container">
-    <div class="chatbox">
-        <div class="chatbox__support">
-            <div class="chatbox__header">
-                <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
-                </div>
-                <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Thierry</h4>
-                    <p class="chatbox__description--header">Votre assistant de santé virtuel</p>
-                </div>
-            </div>
-            <div class="chatbox__messages">
-                <div></div>
-            </div>
-            <div class="chatbox__footer">
-                <input type="text" placeholder="Write a message...">
-                <button class="chatbox__send--footer send__button">Envoyer</button>
+
+    <div class="animsition">
+
+        <div class="loader">
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
             </div>
         </div>
-        <div class="chatbox__button">
-            <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
+
+        <div class="click-capture"></div>
+
+        <div class="menu">
+            <span class="close-menu icon-cross2 right-boxed"></span>
+            <ul class="menu-list right-boxed">
+                <li data-menuanchor="page1">
+                    <a href="#page1">Accueil</a>
+                </li>
+                <li data-menuanchor="page2">
+                    <a href="#page2">Faire un don</a>
+                </li>
+            </ul>
+            <div class="menu-footer right-boxed">
+                <div class="social-list">
+                    <a href="#" class="icon ion-social-facebook"></a>
+                    <a href="#" class="icon ion-social-linkedin"></a>
+                    <a href="#" class="icon ion-social-youtube"></a>
+                </div>
+                <div class="copy">© 2022 FGM.
+                </div>
+            </div>
+        </div>
+
+        <header class="navbar navbar-fullpage boxed">
+            <div class="navbar-bg"></div>
+            <a class="brand" href="#">
+                <img alt="" src="images/brand.png">
+                <div class="brand-info">
+                    <div class="brand-name">FGM</div>
+                </div>
+            </a>
+            <div class="contacts d-none d-md-block">
+                <!-- <div class="contact-item">
+                    <a href="#page2"><span>À propos</span>
+                    </a>
+                </div>
+                <div class="contact-item">
+                    <a href="#page3"><span>Faire un don</span></a>
+                </div> -->
+            </div>
+        </header>
+        <div class="social-bottom-left white boxed">
+            <a href="#" class="icon ion-social-facebook"></a>
+            <a href="#" class="icon ion-social-linkedin"></a>
+            <a href="#" class="icon ion-social-youtube"></a>
+        </div>
+        
+        <div data-anchor="page1" class="pp-scrollable text-white section section-1">
+            <div class="scroll-wrap">
+                <div class="section-bg" style="background-image:url(images/bg/header.jpg);"></div>
+                <div class="scrollable-content">
+                    <div class="vertical-centred">
+                        <div class="boxed boxed-inner">
+                            <div class="boxed">
+                                <div class="container">
+                                    <div class="intro">
+                                        <div class="row">
+                                            <div class="col-md-8 col-lg-6">
+                                               <!-- <h4 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s">
+                                                    <span class="text-primary">Salut,</span> Je suis Thierry
+                                                </h4> -->
+                                                <h1>
+                                                    <span class="text-primary">Salut,</span> Je suis Thierry <br>
+                                                </h1>
+                                                
+                                                <h3><p>Votre assistant virtuel pour toutes les préoccupations sur la maladie de la drépanocytose.</p></h3>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section-bg" style="background-image:url(/static/images/header.jpg);"></div>
+     <div class="container">
+        <div class="chatbox">
+            <div class="chatbox__support">
+                <div style="height: 20%;" class="chatbox__header">
+                    <div class="chatbox__image--header">
+                        <img class="logo" src="static/images/logo.png"
+                            alt="image">
+                    </div>
+                    <div class="chatbox__content--header">
+                        <h5 class="chatbox__heading--header">Thierry</h5>
+                        <p class="chatbox__description--header">Votre assistant de santé virtuel</p>
+                    </div>
+                </div>
+                <div class="chatbox__messages">
+                    <div></div>
+                </div>
+                <div class="chatbox__footer">
+                    <input type="text" placeholder="Écrire un message...">
+                    <button class="chatbox__send--footer send__button">Envoyer</button>
+                </div>
+            </div>
+            <div class="chatbox__button">
+                <button><img class="icon-send"
+                        src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
+            </div>
         </div>
     </div>
-</div>
 
-    <script>
-        $SCRIPT_ROOT = {{ request.script_root|tojson }};
-    </script>
-    <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+    </div>
+
+     <!--START CHAT BOT-->
+     
+<!--SCRIPT CHAT BOT-->
+<script>
+    $SCRIPT_ROOT = {{ request.script_root | tojson }};
+</script>
+<script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/wow.min.js"></script>
+    <script src="/static/js/smoothscroll.js"></script>
+    <script src="/static/js/animsition.js"></script>
+    <script src="/static/js/jquery.validate.min.js"></script>
+    <script src="/static/js/jquery.magnific-popup.min.js"></script>
+    <script src="/static/js/owl.carousel.min.js"></script>
+    <script src="/static/js/jquery.pagepiling.min.js"></script>
+
+    <script src="/static/js/scripts.js"></script>
+
+
+    
 
 </body>
+
 </html>
